styles.scss
$color: #fcfcfc;

div{
  h1{
    font-family: Helvetica;
    padding: 20px;
    color: $color;
  }
  ul{
    color: $color;
    font-size: 20px;
    font-family: Helvetica;
  }
}

%heading{
    text-align: center;
    font-family: Helvetica;
    font-size: 20px;
    margin-top: 6px;
}

.intro{
  @extend heading;
  color: $color;
}

